# crypto3

./: .clang-format  .gitbook.yaml  .gitignore  .gitmodules  .travis  .travis.yml  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  block.podspec.json  codec.podspec.json  crypto3.algebra.podspec.json  crypto3.fft.podspec.json  crypto3.hash.podspec.json  crypto3.kdf.podspec.json  crypto3.mac.podspec.json  crypto3.math.podspec.json  crypto3.nix  crypto3.passhash.podspec.json  crypto3.pbkdf.podspec.json  crypto3.stream.podspec.json  crypto3.vdf.podspec.json  crypto3.zk.podspec.json  flake.nix  hash.podspec.json  kdf.podspec.json  mac.podspec.json  modes.podspec.json  passhash.podspec.json  pbkdf.podspec.json  readme.md  run_tests.sh  stream.podspec.json  vdf.podspec.json  zkllvm-blueprint.nix
benchmarks/: CMakeLists.txt  README.md
benchmarks/algebra/: curves.cpp
benchmarks/zk/: lpc.cpp  pedersen.cpp
crypto3/libs/algebra/: CMakeLists.txt
crypto3/libs/kdf/: CMakeLists.txt  crypto3.kdf.podspec.json
crypto3/libs/pbkdf/: CMakeLists.txt
crypto3/libs/pkpad/: CMakeLists.txt
crypto3/libs/stream/: CMakeLists.txt
example/: CMakeLists.txt  bls.cpp  component_template.hpp  cpp_int_mul_timing.cpp  curves.cpp  curves.hpp  fields.cpp  integer_examples.cpp  intersections.cpp  modular_examples.cpp  multi_exp.cpp  multiexp.cpp  pack.cpp  pairing.cpp  r1cs_gg_ppzksnark.cpp  random_element.cpp  short_weierstrass_coordinates.cpp  simple_example.hpp  test_component.cpp  test_component.hpp
example/detail/: r1cs_examples.hpp
example/merkle/: merkle.cpp
example/plonk/: addition_component.cpp  addition_component.hpp  component_template.hpp
libs/algebra/: .gitignore  CMakeLists.txt  README.md  crypto3.algebra.podspec.json
libs/algebra/bench/: CMakeLists.txt  bench_curves.cpp  bench_fields.cpp
libs/algebra/docs/: concepts.md  implementation.md  introduction.md  manual.md
libs/algebra/example/: CMakeLists.txt  curves.cpp  multiexp.cpp  short_weierstrass_coordinates.cpp
libs/algebra/test/: CMakeLists.txt  curves.cpp  curves_static.cpp  fields.cpp  fields_static.cpp  multiexp.cpp  pairing.cpp  pairing_debug.cpp
libs/block/: CMakeLists.txt  crypto3.block.podspec.json
libs/blueprint/: CMakeLists.txt  flake.nix  run_tests.sh  zkllvm-blueprint.nix
libs/codec/: CMakeLists.txt  README.md  crypto3.codec.podspec.json
libs/common/: CMakeLists.txt
libs/hash/: CMakeLists.txt  README.md  crypto3.hash.podspec.json
libs/kdf/: CMakeLists.txt  README.md  crypto3.kdf.podspec.json
libs/mac/: CMakeLists.txt  crypto3.mac.podspec.json
libs/modes/: CMakeLists.txt  README.md  crypto3.modes.podspec.json
libs/multiprecision/: .gitignore  CMakeLists.txt  README.md
libs/passhash/: CMakeLists.txt  crypto3.passhash.podspec.json
libs/pkpad/: CMakeLists.txt  crypto3.pkpad.podspec.json
libs/pubkey/: CMakeLists.txt  README.md
libs/random/: CMakeLists.txt
libs/threshold/: CMakeLists.txt  README.md  crypto3.threshold.podspec.json
libs/transpiler/: .gitmodules  CMakeLists.txt
libs/vdf/: CMakeLists.txt  README.md  crypto3.vdf.podspec.json
libs/vdf/docs/: chia.md  (+4 more)
libs/zk/: CMakeLists.txt  README.md  crypto3.zk.podspec.json
test/: CMakeLists.txt  Jamfile.v2  accumulation_vector.cpp  adler.cpp  aead_ccm.cpp  aead_chacha20poly1305.cpp  aead_eax.cpp  aead_gcm.cpp  aead_ocb.cpp  aead_siv.cpp  algebraic_engine.cpp  algebraic_random_device.cpp  aria.cpp  base.cpp  basic_components.cpp  basic_components_r1cs_gg_ppzksnark.cpp  bcrypt.cpp  bilinearity.cpp  blake2b.cpp  blake2b.json  blowfish.cpp  bls.cpp  camellia.cpp  cast.cpp  cbc.cpp  cbc_mac.cpp  cfb.cpp  chacha.cpp  checksum_layer.cpp  checksum_prefix_layer.cpp  chia.cpp  cmac.cpp  component_batch.cpp  constexpr_test_cpp_int.cpp  constexpr_test_cpp_int_2.cpp  constexpr_test_cpp_int_3.cpp  constexpr_test_cpp_int_4.cpp  constexpr_test_cpp_int_5.cpp  constexpr_test_cpp_int_6.cpp  crc.cpp  (+249 more)
test/bench_test/: CMakeLists.txt  bech_test_modular_adaptor_fixed.cpp  bench_curves.cpp  bench_fields.cpp  bench_test_modular_adaptor_fixed.cpp
test/blueprint/: plonk.cpp
test/commitment/: fold_polynomial.cpp  fri.cpp  kimchi_pedersen.cpp  kzg.cpp  lpc.cpp  lpc_performance.cpp  pedersen.cpp  powers_of_tau.cpp  proof_of_knowledge.cpp  proof_of_work.cpp  r1cs_gg_ppzksnark_mpc.cpp  type_traits.cpp
test/components/: basic_components.cpp  basic_components_r1cs_gg_ppzksnark.cpp  exponentiation_component.cpp  merkle_tree_components.cpp  r1cs_examples.hpp  r1cs_ppzksnark_verifier_component.cpp  set_commitment_component.cpp  verify_r1cs_scheme.hpp
test/data/: blowfish.json  coordinates.json  curves.json  fields.json  keccak.json  md4.json  md5.json  pairing.json  poseidon.json  rijndael.json  ripemd.json  sha.json  sha1.json  sha2.json  sha3.json  tiger.json
test/detail/: circuits.hpp  prepare_scalars.cpp  r1cs_examples.hpp  sha256_component.hpp  zkpm_evaluate.cpp
test/gadgets/: gadgets.cpp  merkle_tree_gadgets.cpp  r1cs_ppzksnark_verifier_component.cpp  r1cs_ppzksnark_verifier_gadget.cpp  set_commitment_component.cpp  set_commitment_gadget.cpp  simple_example.hpp
test/hashes/: knapsack.cpp  knapsack.hpp  knapsack_verification.cpp  pedersen.cpp  sha256.cpp  sha256.hpp  sha256_verification.cpp
test/math/: expression.cpp
test/merkle/: graph.cpp  merkle.cpp
test/mock/: mocked_components.cpp
test/non_native/: plonk_eddsa_mul.cpp  plonk_field_mul.cpp
test/pairing/: weierstrass_miller_loop.cpp  weierstrass_miller_loop.hpp  weierstrass_precomputation.cpp
test/profiling/: profiling_menu.cpp
test/routing/: as_waksman.cpp  benes.cpp
test/routing_algorithms/: test_routing_algorithms.cpp
test/sponge/: aux_sponge.hpp  aux_transcript_fq.hpp  aux_transcript_fr.hpp  compare.cpp  oracles.cpp  sponge.cpp  transcript_fq.cpp  transcript_fr.cpp
test/transcript/: kimchi_transcript.cpp  kimchi_transcript2.cpp  sponge_transcript.cpp  transcript.cpp
test/utils/: connectedness_check.cpp
test/verifiers/: r1cs_ppzksnark.cpp
test/voting/: encrypted_input_voting.cpp  saver.cpp
test/zkevm/: bytecode.cpp  opcode_tester.hpp  state_transition.cpp  zkevm_word.cpp
(+6198 files in other folders)
